k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-api
  namespace: devops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-api
  template:
    metadata:
      labels:
        app: devops-api
    spec:
      containers:
        - name: api
          image: proyecto_devops-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
