k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: devops-app
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
