k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-api-service
  namespace: devops-app
spec:
  selector:
    app: devops-api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
